force-app/main/default/objects/Quote/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>Fecha en la que el presupuesto fue aprobado técnicamente.</description>
    <label>Fecha de Aprobación Técnica</label>
    <type>Date</type>
</CustomField>