force-app/main/default/objects/Quote/fields/Asunto_Titulo__c.field-meta.xml
<CustomField>
    <fullName>Asunto_Titulo__c</fullName>
    <label>Asunto / Título</label>
    <length>255</length>
    <type>Text</type>
</CustomField>