force-app/main/default/objects/Quote/fields/Business_Lines_Selected__c.field-meta.xml
<CustomField>
    <fullName>Business_Lines_Selected__c</fullName>
    <description>Almacena las líneas de negocio seleccionadas en el editor técnico.</description>
    <label>Líneas de Negocio Seleccionadas</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>