force-app/main/default/objects/Quote/fields/Condiciones_Comerciales__c.field-meta.xml
<CustomField>
    <fullName>Condiciones_Comerciales__c</fullName>
    <label>Condiciones Comerciales</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>