force-app/main/default/objects/Quote/fields/Estrategia_Venta__c.field-meta.xml
<CustomField>
    <fullName>Estrategia_Venta__c</fullName>
    <description>Estrategia de venta seleccionada durante la creación del presupuesto técnico.</description>
    <label>Estrategia de Venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E1</fullName>
                <label>E1 - Póliza Anual</label>
            </value>
            <value>
                <fullName>E2</fullName>
                <label>E2 - Extraordinario</label>
            </value>
            <value>
                <fullName>E3</fullName>
                <label>E3 - Cliente Nuevo</label>
            </value>
            <value>
                <fullName>E4</fullName>
                <label>E4 - Retardantes</label>
            </value>
            <value>
                <fullName>E5</fullName>
                <label>E5 - Cedis</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>