force-app/main/default/objects/Quote/fields/Introduccion__c.field-meta.xml
<CustomField>
    <fullName>Introduccion__c</fullName>
    <label>Introducción</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>