force-app/main/default/objects/Quote/fields/Introduction_Text__c.field-meta.xml
<CustomField>
    <fullName>Introduction_Text__c</fullName>
    <label>Texto de Introducción</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>