force-app/main/default/objects/Quote/fields/Markers_Data__c.field-meta.xml
<CustomField>
    <fullName>Markers_Data__c</fullName>
    <label>Datos de Marcadores (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>