force-app/main/default/objects/Quote/fields/Memoria_Descriptiva__c.field-meta.xml
<CustomField>
    <fullName>Memoria_Descriptiva__c</fullName>
    <description>Espacio para la redacción de la memoria técnica descriptiva del servicio.</description>
    <inlineHelpText>Redacte aquí la descripción detallada de los hallazgos y la solución propuesta.</inlineHelpText>
    <label>Memoria Descriptiva</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>