force-app/main/default/objects/Quote/fields/Selected_Plan_URL__c.field-meta.xml
<CustomField>
    <fullName>Selected_Plan_URL__c</fullName>
    <label>URL del Plano Seleccionado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>