force-app/main/default/objects/Quote/fields/Show_Discount__c.field-meta.xml
<CustomField>
    <fullName>Show_Discount__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mostrar Descuento en PDF</label>
    <type>Checkbox</type>
</CustomField>