force-app/main/default/objects/Quote/fields/Show_Introduction__c.field-meta.xml
<CustomField>
    <fullName>Show_Introduction__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mostrar Introducción</label>
    <type>Checkbox</type>
</CustomField>