force-app/main/default/objects/Quote/fields/Show_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Show_Subtotal__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mostrar Subtotal en PDF</label>
    <type>Checkbox</type>
</CustomField>