force-app/main/default/objects/Quote/fields/Show_Tax__c.field-meta.xml
<CustomField>
    <fullName>Show_Tax__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mostrar Impuestos en PDF</label>
    <type>Checkbox</type>
</CustomField>