force-app/main/default/objects/Quote/fields/Show_Total__c.field-meta.xml
<CustomField>
    <fullName>Show_Total__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mostrar Total en PDF</label>
    <type>Checkbox</type>
</CustomField>