force-app/main/default/objects/Quote/fields/Show_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Show_Warranty__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mostrar Garantía</label>
    <type>Checkbox</type>
</CustomField>