force-app/main/default/objects/Quote/fields/Source_Quote__c.field-meta.xml
<CustomField>
    <fullName>Source_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para rastrear el presupuesto original del cual se clon� este registro.</description>
    <label>Cotizaci�n Origen</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Cotizaciones Clonadas (Hijos)</relationshipLabel>
    <relationshipName>Cloned_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>