force-app/main/default/objects/Quote/fields/Subestrategia_Venta__c.field-meta.xml
<CustomField>
    <fullName>Subestrategia_Venta__c</fullName>
    <label>Subestrategia de Venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Póliza fija</fullName>
            </value>
            <value>
                <fullName>Programado</fullName>
            </value>
            <value>
                <fullName>Extraordinario</fullName>
            </value>
            <value>
                <fullName>Bomberazo</fullName>
            </value>
            <value>
                <fullName>Venta de producto</fullName>
            </value>
            <value>
                <fullName>Proyecto especial (o a la medida)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>