force-app/main/default/objects/Quote/fields/Technical_Sedes__c.field-meta.xml
<CustomField>
    <fullName>Technical_Sedes__c</fullName>
    <description>Almacena el nombre y ubicación de las sedes seleccionadas para el PDF.</description>
    <label>Sedes de Ejecución</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>