force-app/main/default/objects/Quote/fields/Warranty_Text__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Text__c</fullName>
    <label>Texto de Garantía</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>